Fix: estilo navbar z-index

--- a/src/components/Admin/Sidebar/style.css
+++ b/src/components/Admin/Sidebar/style.css
@@ -1,5 +1,5 @@
 .sidebar-admin {
-    @apply md:w-14 h-full fixed md:relative z-10 md:z-0
+    @apply md:w-14 h-full fixed md:relative z-10 
     flex flex-col items-center justify-between
     md:border-r md:border-neutro-300 md:border-opacity-20
     bg-neutro-100 
